kubernetes/argocd/apps/workloads/paperless/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
    component: server
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: paperless
    component: server
